--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           publish: npm run release
+          # Note: npm run release uses scripts/publish-with-oidc.js which properly handles OIDC authentication
 
       # Snapshot releases don't need the changeset action to put together PRs.
       - name: Debug OIDC token availability
