--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/qualweb/qualweb.git"
   },
   "scripts": {
-    "release": "npm -ws run build && npx changeset publish && git push --follow-tags",
+    "release": "npm -ws run build && node scripts/publish-with-oidc.js && git push --follow-tags",
     "release-snapshot": "npm run build && npx changeset version --snapshot next && npx changeset publish --tag next"
   },
   "keywords": [
